pivot feature to address request limits

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "content_scripts": [
         {
-            "js": ["scripts/content.js", "scripts/decode.js"],
+            "js": ["scripts/content.js"],
             "matches": [
                 "https://www.linkedin.com/jobs/search/*"
             ]
