--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
     "manifest_version": 3,
     "name": "LInkedIn Jobs Extended",
-    "version": "0.2.0",
+    "version": "0.3.0",
+    "permissions": [ "tabs" ],
     "content_scripts": [
         {
-            "js": ["scripts/content.js"],
+            "js": [ "scripts/content.js" ],
             "matches": [
-                "https://www.linkedin.com/jobs/search/*"
+                "https://www.linkedin.com/jobs/search/?currentJobId=*"
             ]
         }
-    ]
+    ],
+    "background": {
+        "service_worker": "scripts/service-worker.js"
+    }
 }
