--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,11 @@
     "manifest_version": 3,
     "name": "LInkedIn Jobs Extended",
     "description": "Includes additional information in the highlights section of LinkedIn job postings, using the content of the job description.",
-    "version": "0.7.3",
+    "version": "0.8.0",
     "permissions": [ "storage", "tabs" ],
+    "action": {
+        "default_popup": "popup.html"
+    },
     "options_ui": {
         "page": "options.html",
         "open_in_tab": false
