--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,13 @@
     "manifest_version": 3,
     "name": "LInkedIn Jobs Extended",
     "description": "Includes additional information in the highlights section of LinkedIn job postings, using the content of the job description.",
-    "version": "0.8.0",
+    "version": "0.8.1",
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+    },
     "permissions": [ "storage", "tabs" ],
     "action": {
         "default_popup": "popup.html"
